[gd_scene load_steps=8 format=3 uid="uid://4ahxkdbgy447"]

[ext_resource type="Script" uid="uid://ckcnmmdmj10wo" path="res://scripts/ui/combat/action_field.gd" id="1_vm0q0"]
[ext_resource type="Texture2D" uid="uid://b5idgxy5pjm63" path="res://assets/ui/panels/9patch_bones.png" id="2_r6w7g"]
[ext_resource type="Texture2D" uid="uid://b7t35b1xyhqhr" path="res://assets/ui/panels/9patch_bones_frame.png" id="3_qph8m"]
[ext_resource type="Texture2D" uid="uid://c6sqtdxnbp2ab" path="res://assets/ui/progress_bars/basic progress bar/progress_bar_fill_bg.png" id="4_0cgqb"]
[ext_resource type="PackedScene" path="res://scenes/ui/combat/damage_preview_floater.tscn" id="5_sgqpl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sgqpl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_joayw"]
texture = ExtResource("4_0cgqb")
texture_margin_left = 22.0
texture_margin_top = 22.0
texture_margin_right = 22.0
texture_margin_bottom = 22.0

[node name="ActionField" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
offset_right = 120.0
offset_bottom = 100.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_sgqpl")
script = ExtResource("1_vm0q0")
action_type = null
action_name = null
action_description = null
die_slots = null
base_damage = null
damage_multiplier = null
required_tags = null
restricted_tags = null
element = null
snap_duration = null
return_duration = null
metadata/_edit_vertical_guides_ = [-146.0]

[node name="FillTexture" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_r6w7g")

[node name="StrokeTexture" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("3_qph8m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="HeaderPlate" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_joayw")

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPlate"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Action"
horizontal_alignment = 1

[node name="DieSlotRow" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DieSlotsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/DieSlotRow"]
layout_mode = 2
columns = 3

[node name="SlotPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/DieSlotRow/DieSlotsGrid"]
layout_mode = 2

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer/DieSlotRow/DieSlotsGrid/SlotPanel"]
layout_mode = 2

[node name="FooterRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DmgPreviewLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterRow"]
visible = false
layout_mode = 2

[node name="MultLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterRow"]
visible = false
layout_mode = 2

[node name="FooterSpacer" type="Control" parent="MarginContainer/VBoxContainer/FooterRow"]
layout_mode = 2

[node name="ChargeLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterRow"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
horizontal_alignment = 2
vertical_alignment = 2

[node name="DamagePreviewFloater" parent="." instance=ExtResource("5_sgqpl")]
layout_mode = 2
size_flags_vertical = 0
